[gd_scene load_steps=7 format=2]

[ext_resource path="res://gfx/fonts/spelunkid_font.tres" type="BitmapFont" id=1]
[ext_resource path="res://sys/ui/responseCurve/DotMatrixPreview.gd" type="Script" id=2]
[ext_resource path="res://sys/ui/responseCurve/PreviewButton.gd" type="Script" id=3]
[ext_resource path="res://gfx/ui/vu/dotmatrix_empty.png" type="Texture" id=4]
[ext_resource path="res://sys/ui/responseCurve/ResponseCurve.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.447059, 0.768627, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
shadow_color = Color( 0, 0, 0, 0.470588 )
shadow_size = 4
shadow_offset = Vector2( 0, 2 )

[node name="ResponseButton" type="Button"]
margin_right = 116.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 96 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 0 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_hover = Color( 0, 0, 0, 0 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 0 )
text = "KeyScale Rate"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lbl" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = -20.0001
margin_right = -6.0
margin_bottom = -6.00012
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.615686 )
custom_constants/line_spacing = 2
custom_constants/shadow_offset_y = 1
text = "KeyScale Rate"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P" type="Panel" parent="."]
margin_left = 26.0
margin_top = 8.0
margin_right = 90.0
margin_bottom = 72.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preview" type="TextureRect" parent="P"]
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="."]
margin_left = 120.0
margin_right = 536.0
margin_bottom = 352.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResponseCurve" parent="Popup" instance=ExtResource( 5 )]
margin_left = 16.0
margin_top = 8.0
margin_right = 400.0
margin_bottom = 344.0
[connection signal="pressed" from="." to="." method="_on_ResponseButton_pressed"]
[connection signal="resized" from="." to="." method="_on_ResponseButton_resized"]
